Fix CI workflow: add proper dependencies, env vars, and artifact uploads
- Add unit-tests as dependency for build job
- Remove redundant build step from E2E tests (Playwright handles dev server)
- Add NEXTAUTH_SECRET and NEXT_PUBLIC_APP_URL env vars for build and E2E
- Set NODE_ENV=test for test jobs
- Remove continue-on-error from security audit (fail on moderate+ vulnerabilities)
- Add artifact uploads for test coverage, build artifacts, and Playwright reports
- Update documentation and add new monitoring/alerting features

--- a/env.example
+++ b/env.example
@@ -34,6 +34,16 @@ MAX_TURNS=20
 # Default: 4000 tokens (50% of 8K context with safety buffer)
 DISCUSSION_TOKEN_LIMIT=4000
 
+# Token Count Sync Validation (Optional - defaults shown)
+# Enable token count sync validation when loading discussion context
+# Validates file-database token count consistency and optionally auto-repairs small mismatches
+# Default: false (disabled)
+ENABLE_TOKEN_SYNC_VALIDATION=false
+# Auto-repair token count mismatches if difference is < 5%
+# Requires ENABLE_TOKEN_SYNC_VALIDATION=true
+# Default: false (disabled)
+AUTO_REPAIR_TOKEN_SYNC=false
+
 # LLM Response Token Limit (Optional - defaults shown)
 # Maximum tokens per AI response (default: 2000)
 # Increased from 1000 to 2000 for more comprehensive responses (300-500 words as per prompts)
@@ -124,3 +134,91 @@ BACKUPS_DIR=data/backups
 ENABLE_VIRUS_SCAN=false
 CLAMAV_HOST=localhost
 CLAMAV_PORT=3310
+
+# Error Handling Configuration (Optional - defaults shown)
+ERROR_DEDUPLICATION_WINDOW_MS=5000
+ERROR_THROTTLE_WINDOW_MS=5000
+
+# Operation-Specific Rate Limiting (Optional - defaults shown)
+RATE_LIMIT_START_DIALOGUE=3
+RATE_LIMIT_PROCEED_DIALOGUE=10
+RATE_LIMIT_SUBMIT_ANSWERS=10
+RATE_LIMIT_GENERATE_QUESTIONS=5
+RATE_LIMIT_GENERATE_SUMMARY=2
+
+# Retry Configuration (Optional - defaults shown)
+RETRY_MAX_ATTEMPTS=3
+RETRY_BASE_DELAY_MS=1000
+RETRY_MAX_DELAY_MS=30000
+RETRY_JITTER_ENABLED=true
+
+# Metrics Configuration (Optional - defaults shown)
+METRICS_ENABLED=true
+METRICS_RETENTION_HOURS=24
+METRICS_AGGREGATION_INTERVAL_MS=60000
+
+# Logging Configuration (Optional - defaults shown)
+LOG_SAMPLING_RATE=1.0
+LOG_CORRELATION_ENABLED=true
+LOG_STRUCTURED_FORMAT=json
+
+# Performance Monitoring (Optional - defaults shown)
+PERFORMANCE_SLOW_THRESHOLD_MS=5000
+PERFORMANCE_TRACK_ENABLED=true
+
+# Cost Tracking Configuration (Optional - defaults shown)
+COST_TRACKING_ENABLED=true
+GROQ_INPUT_COST_PER_1M=0.27
+GROQ_OUTPUT_COST_PER_1M=0.27
+MISTRAL_INPUT_COST_PER_1M=2.50
+MISTRAL_OUTPUT_COST_PER_1M=7.50
+OPENROUTER_INPUT_COST_PER_1M=1.00
+OPENROUTER_OUTPUT_COST_PER_1M=3.00
+
+# Cost Optimization (Optional - defaults shown)
+COST_OPTIMIZATION_ENABLED=true
+DAILY_COST_BUDGET=10.00
+COST_ALERT_THRESHOLD=0.8
+
+# Circuit Breaker Configuration (Optional - defaults shown)
+CIRCUIT_BREAKER_ENABLED=true
+CIRCUIT_BREAKER_FAILURE_THRESHOLD=5
+CIRCUIT_BREAKER_WINDOW_MS=60000
+CIRCUIT_BREAKER_COOLDOWN_MS=30000
+CIRCUIT_BREAKER_SUCCESS_THRESHOLD=2
+
+# Provider Health Monitoring (Optional - defaults shown)
+PROVIDER_HEALTH_CHECK_INTERVAL_MS=30000
+PROVIDER_MIN_SUCCESS_RATE=0.95
+PROVIDER_MAX_LATENCY_MS=10000
+
+# Graceful Degradation (Optional - defaults shown)
+DEGRADATION_ENABLED=true
+DEGRADATION_CPU_THRESHOLD=0.8
+DEGRADATION_MEMORY_THRESHOLD=0.8
+DEGRADATION_ACTIVE_REQUESTS_THRESHOLD=100
+
+# Caching Configuration (Optional - defaults shown)
+CACHE_ENABLED=true
+CACHE_TTL_MS=3600000
+CACHE_MAX_SIZE=1000
+CACHE_RESPONSE_CACHING=false
+
+# Alerting Configuration (Optional - defaults shown)
+ALERTS_ENABLED=true
+ALERT_ERROR_RATE_THRESHOLD=0.05
+ALERT_DISK_SPACE_THRESHOLD=0.1
+ALERT_WEBHOOK_URL=
+
+# Memory Management (Optional - defaults shown)
+MEMORY_MONITORING_ENABLED=true
+MEMORY_CLEANUP_INTERVAL_MS=300000
+MEMORY_PRESSURE_THRESHOLD=0.8
+
+# Feature Flags (Optional - defaults shown)
+FEATURE_METRICS_ENABLED=true
+FEATURE_COST_TRACKING_ENABLED=true
+FEATURE_CIRCUIT_BREAKER_ENABLED=true
+FEATURE_CACHING_ENABLED=true
+FEATURE_ALERTING_ENABLED=true
+FEATURE_PERFORMANCE_MONITORING_ENABLED=true
