--- a/.nvmrc
+++ b/.nvmrc
@@ -1,1 +1,3 @@
+# Minimum required: 20.9.0 (as specified in package.json engines)
+# Using 20.18.0 LTS for better compatibility and security updates
 20.18.0
